force-app/main/default/objects/Support__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>