force-app/main/default/objects/Support__c/fields/Classifications__c.field-meta.xml
<CustomField>
    <fullName>Classifications__c</fullName>
    <label>Classifications</label>
    <length>100</length>
    <type>Text</type>
</CustomField>