force-app/main/default/objects/Support__c/fields/Final_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution__c</fullName>
    <label>Final Resolution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>