force-app/main/default/objects/Support__c/fields/Number_of_Threads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Threads__c</fullName>
    <label>Number of Threads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>