force-app/main/default/objects/Support__c/fields/Org_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Org_Name_Contact__c</fullName>
    <label>Org Name (Contact)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>