force-app/main/default/objects/Support__c/fields/Premium_Support_Account__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support_Account__c</fullName>
    <label>Premium Support (Account)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>