force-app/main/default/objects/Support__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>