force-app/main/default/objects/Support__c/fields/Resolution_Time_in_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_in_Business_Hours__c</fullName>
    <label>Resolution Time in Business Hours</label>
    <type>Time</type>
</CustomField>