force-app/main/default/objects/Support__c/fields/Ticket_Closed_Time__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Closed_Time__c</fullName>
    <label>Ticket Closed Time</label>
    <type>DateTime</type>
</CustomField>