force-app/main/default/objects/Support__c/fields/Ticket_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Created_Time__c</fullName>
    <label>Ticket Created Time</label>
    <type>DateTime</type>
</CustomField>