force-app/main/default/objects/Support__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <label>Ticket Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>